# magic-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml  spr_paper.tex
docs/: DESIGN-PRINCIPLES.md  decoder_grammar_plan.md  decoder_grammar_status.md  decoder_impala_plan.md  decoder_packed_cells_plan.md  decoder_per_choice_sync_removal.md  deepnash_stratego_2206.15378.tex  inference_pipeline_refactor.md  mage_go_torch_marshaling_design.md  mage_java_torch_bridge_plan.md  pretrain_decision_arrow_format.md  rnad_design.md  rnad_deviations.md  rnad_implementation_plan.md  rnad_theory_2002.08456.tex  spr_gap_checklist.md  text_encoder_inline_blanks_plan.md  text_encoder_inline_blanks_status.md  text_encoder_plan.md  text_encoder_render_plan_abi.md  text_encoder_value_pretrain_plan.md  train_encoder_backend_refactor_checklist.md
magic_ai/: AGENTS.md  __init__.py  actions.py  aggregate_tensor.py  buffer.py  encoder_parity.py  game_state.py  lstm_recompute.py  model.py  model_state.py  native_encoder.py  native_rollout.py  opponent_pool.py  ppo.py  replay_buffer.py  replay_decisions.py  returns.py  rnad.py  rnad_trainer.py  rollout.py  sharded_native.py  training_interfaces.py
magic_ai/native/: AGENTS.md  __init__.py  inference_server.py  policy_version.py  rollout_actor.py  sharded.py
magic_ai/slot_encoder/: AGENTS.md  __init__.py  buffer.py  encoder_parity.py  game_state.py  (+4 more)
reports/: json_0.6B_1024.json  plain_0.6B_1024.json  synth_v0_json-keywords.json  synth_v0_json.json  synth_v0_plain.json  synth_v0_tagged.json  synth_v1_json-emphasized.json  synth_v1_labeled-prose.json  synth_v2_json-emphasized-keywords.json  tagged_0.6B_1024.json  v0_json.json  v0_plain.json  v0_tagged.json  v1_json-emphasized.json  v1_json-keywords.json  v1_labeled-prose.json  v2_json-emphasized-keywords.json  v3_json-scoped.json
rust/: AGENTS.md
rust/forge_extract/: Cargo.toml
rust/forge_extract/src/: main.rs
scripts/: AGENTS.md  _dump_bolts_state.py  _dump_native_parity.py  _profile_rnad.py  bench_env_stepping.py  bench_forge_extract.py  bench_packed_encoder.py  bench_text_full_step.py  bench_text_replay_append.py  build_card_embeddings.py  build_text_card_embeddings.py  build_text_encoder_card_cache.py  build_text_encoder_vocab.py  check_encoder_parity.py  compare_reports.py  decoder_bc_parity.py  eval_card_embeddings.py  export_text_encoder_token_tables.py  extract_forge_choice_situations.py  inline_blank_bc_parity.py  jsonl_games_to_bin.py  play_text_rollout.py  pretrain_text_encoder.py  shard_forge_jsonl_to_pt.py  smoke_decoder_train.py  synth_embedding_eval.py  test_forge_target_encoding_smoke.py  train.py  train_ppo.py
tests/: AGENTS.md  conftest.py  test_actions.py  test_actor_critic_decoder.py  test_assembler.py  test_assembler_dedup.py  test_card_cache.py  test_decision_spec_render.py  test_decoder_inference.py  test_decoder_loss.py  test_encoder_parity.py  test_forge_target_encoding.py  test_grammar.py  test_grammar_decoder.py  test_grammar_decoder_wiring.py  test_inference_server.py  test_inline_blank_bc_parity.py  test_lstm_hist_injection.py  test_lstm_recompute_strategies.py  test_mlm.py  test_native_assembler_parity.py  test_native_decision_spec.py  test_native_decision_spec_register.py  test_native_decoder_batch.py  test_native_encoder.py  test_native_rollout.py  test_native_text_trajectory_buffer.py  test_native_token_tables.py  test_opponent_pool.py  test_per_choice_sync_free.py  test_policy_value_pretrain_arrow.py  test_ppo.py  test_recurrent_text_policy.py  test_render_plan_parity.py  test_render_plan_writer.py  test_replay_buffer.py  test_replay_decisions.py  test_rnad.py  test_rnad_coverage.py  test_rnad_nfg.py  (+21 more)
(+41 files in other folders)
