[project]
name = "magic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mage-go",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "wandb>=0.26.0",
]


[tool.uv.sources]
torch = { index = "pytorch", marker = "sys_platform != 'darwin'" }
mage-go = { path = "../mage-go" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "line-profiler>=5.0.2",
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["magic_ai", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
