[project]
name = "magic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flash-attn>=2.8.3",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.4/flash_attn-2.8.3+cu128torch2.11-cp314-cp314-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "mage-go",
    "orjson>=3.11",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "trueskill>=0.4.5",
    "wandb>=0.26.0",
]


[tool.uv.sources]
torch = { index = "pytorch", marker = "sys_platform != 'darwin'" }
mage-go = { path = "../mage-go" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "line-profiler>=5.0.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["magic_ai", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:`torch\\.jit\\.script_method` is not supported in Python 3\\.14\\+ and may break\\. Please switch to `torch\\.compile` or `torch\\.export`\\.:DeprecationWarning:torch\\.jit\\._script",
]
