[package]
name = "forge_extract"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1"
blake2 = "0.10"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
once_cell = "1"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
